y.output

state 0
	$accept: .Program $end 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 2
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27
	Program  goto 1

state 1
	$accept:  Program.$end 

	$end  accept
	.  error


state 2
	Program:  exp.    (1)
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 

	AND  shift 38
	EQUALS  shift 32
	PLUS  shift 30
	MINUS  shift 31
	STAR  shift 28
	FORWARDSLASH  shift 29
	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	.  reduce 1 (src line 52)


state 3
	exp:  NIL.    (35)

	.  reduce 35 (src line 120)


state 4
	exp:  INTLIT.    (36)

	.  reduce 36 (src line 121)


state 5
	exp:  STRINGLIT.    (37)

	.  reduce 37 (src line 122)


state 6
	exp:  seqExp.    (38)

	.  reduce 38 (src line 123)


state 7
	exp:  negation.    (39)

	.  reduce 39 (src line 124)


state 8
	exp:  callExp.    (40)

	.  reduce 40 (src line 125)


state 9
	exp:  infixExp.    (41)

	.  reduce 41 (src line 126)


state 10
	exp:  arrExp.    (42)

	.  reduce 42 (src line 127)


state 11
	exp:  recordExp.    (43)

	.  reduce 43 (src line 128)


state 12
	exp:  assignment.    (44)

	.  reduce 44 (src line 129)


state 13
	exp:  ifThenElse.    (45)

	.  reduce 45 (src line 130)


state 14
	exp:  whileExp.    (46)

	.  reduce 46 (src line 131)


state 15
	exp:  forExp.    (47)

	.  reduce 47 (src line 132)


state 16
	exp:  BREAK.    (48)

	.  reduce 48 (src line 133)


state 17
	exp:  letExp.    (49)

	.  reduce 49 (src line 134)


state 18
	subscript:  lValue.LBRACKET exp RBRACKET 
	fieldExp:  lValue.DOT ID 
	exp:  lValue.    (50)
	assignment:  lValue.COLONEQUALS exp 

	LBRACKET  shift 40
	COLONEQUALS  shift 42
	DOT  shift 41
	.  reduce 50 (src line 135)


state 19
	seqExp:  LPAREN.exp_list_semi RPAREN 
	exp_list_semi: .    (29)

	.  reduce 29 (src line 109)

	exp_list_semi  goto 43

state 20
	negation:  MINUS.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 44
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

21: shift/reduce conflict (shift 46(0), red'n 25(0)) on LPAREN
21: shift/reduce conflict (shift 45(0), red'n 25(0)) on LBRACKET
state 21
	subscript:  ID.LBRACKET exp RBRACKET 
	arrExp:  ID.LBRACKET exp RBRACKET OF exp 
	lValue:  ID.    (25)
	callExp:  ID.LPAREN exp_list_comma RPAREN 
	recordExp:  ID.LCURLY Bindings RCURLY 
	recordExp:  ID.LCURLY RCURLY 

	LPAREN  shift 46
	LBRACKET  shift 45
	LCURLY  shift 47
	.  reduce 25 (src line 101)


state 22
	ifThenElse:  IF.exp THEN exp ELSE exp 
	ifThenElse:  IF.exp THEN exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 48
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 23
	whileExp:  WHILE.exp DO exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 49
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 24
	forExp:  FOR.ID COLONEQUALS exp TO exp DO exp 

	ID  shift 50
	.  error


state 25
	letExp:  LET.Decs IN exp_list_semi END 

	FUNCTION  shift 58
	TYPE  shift 56
	VAR  shift 57
	.  error

	Decs  goto 51
	funDec  goto 55
	Dec  goto 52
	tyDec  goto 53
	varDec  goto 54

state 26
	lValue:  subscript.    (26)

	.  reduce 26 (src line 102)


state 27
	lValue:  fieldExp.    (27)

	.  reduce 27 (src line 103)


state 28
	infixExp:  exp STAR.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 59
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 29
	infixExp:  exp FORWARDSLASH.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 60
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 30
	infixExp:  exp PLUS.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 61
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 31
	infixExp:  exp MINUS.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 62
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 32
	infixExp:  exp EQUALS.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 63
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 33
	infixExp:  exp DOUBLEARROW.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 64
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 34
	infixExp:  exp RARROW.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 65
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 35
	infixExp:  exp LARROW.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 66
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 36
	infixExp:  exp GREATERTHANEQ.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 67
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 37
	infixExp:  exp LESSTHANEQ.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 68
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 38
	infixExp:  exp AND.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 69
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 39
	infixExp:  exp BAR.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 70
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 40
	subscript:  lValue LBRACKET.exp RBRACKET 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 71
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 41
	fieldExp:  lValue DOT.ID 

	ID  shift 72
	.  error


state 42
	assignment:  lValue COLONEQUALS.exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 73
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 43
	exp_list_semi:  exp_list_semi.exp 
	exp_list_semi:  exp_list_semi.SEMICOLON exp 
	seqExp:  LPAREN exp_list_semi.RPAREN 

	MINUS  shift 20
	LPAREN  shift 19
	RPAREN  shift 76
	SEMICOLON  shift 75
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 74
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

44: shift/reduce conflict (shift 33(0), red'n 52(6)) on DOUBLEARROW
44: shift/reduce conflict (shift 34(0), red'n 52(6)) on RARROW
44: shift/reduce conflict (shift 35(0), red'n 52(6)) on LARROW
44: shift/reduce conflict (shift 36(0), red'n 52(6)) on GREATERTHANEQ
44: shift/reduce conflict (shift 37(0), red'n 52(6)) on LESSTHANEQ
44: shift/reduce conflict (shift 39(0), red'n 52(6)) on BAR
state 44
	negation:  MINUS exp.    (52)
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 

	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	.  reduce 52 (src line 141)


state 45
	subscript:  ID LBRACKET.exp RBRACKET 
	arrExp:  ID LBRACKET.exp RBRACKET OF exp 

	MINUS  shift 20
	LPAREN  shift 19
	BREAK  shift 16
	FOR  shift 24
	IF  shift 22
	LET  shift 25
	NIL  shift 3
	WHILE  shift 23
	ID  shift 21
	INTLIT  shift 4
	STRINGLIT  shift 5
	.  error

	exp  goto 77
	seqExp  goto 6
	negation  goto 7
	callExp  goto 8
	infixExp  goto 9
	arrExp  goto 10
	recordExp  goto 11
	assignment  goto 12
	ifThenElse  goto 13
	whileExp  goto 14
	forExp  goto 15
	letExp  goto 17
	lValue  goto 18
	subscript  goto 26
	fieldExp  goto 27

state 46
	callExp:  ID LPAREN.exp_list_comma RPAREN 
	exp_list_comma: .    (32)

	.  reduce 32 (src line 114)

	exp_list_comma  goto 78

state 47
	recordExp:  ID LCURLY.Bindings RCURLY 
	recordExp:  ID LCURLY.RCURLY 

	RCURLY  shift 80
	ID  shift 82
	.  error

	Bindings  goto 79
	Binding  goto 81

state 48
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 
	ifThenElse:  IF exp.THEN exp ELSE exp 
	ifThenElse:  IF exp.THEN exp 

	AND  shift 38
	EQUALS  shift 32
	PLUS  shift 30
	MINUS  shift 31
	STAR  shift 28
	FORWARDSLASH  shift 29
	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	THEN  shift 83
	.  error


state 49
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 
	whileExp:  WHILE exp.DO exp 

	AND  shift 38
	EQUALS  shift 32
	PLUS  shift 30
	MINUS  shift 31
	STAR  shift 28
	FORWARDSLASH  shift 29
	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	DO  shift 84
	.  error


state 50
	forExp:  FOR ID.COLONEQUALS exp TO exp DO exp 

	COLONEQUALS  shift 85
	.  error


state 51
	Decs:  Decs.Dec 
	letExp:  LET Decs.IN exp_list_semi END 

	FUNCTION  shift 58
	IN  shift 87
	TYPE  shift 56
	VAR  shift 57
	.  error

	funDec  goto 55
	Dec  goto 86
	tyDec  goto 53
	varDec  goto 54

state 52
	Decs:  Dec.    (77)

	.  reduce 77 (src line 186)


state 53
	Dec:  tyDec.    (2)

	.  reduce 2 (src line 55)


state 54
	Dec:  varDec.    (3)

	.  reduce 3 (src line 56)


state 55
	Dec:  funDec.    (4)

	.  reduce 4 (src line 57)


state 56
	tyDec:  TYPE.ID EQUALS ty 

	ID  shift 88
	.  error


state 57
	varDec:  VAR.ID COLONEQUALS exp 
	varDec:  VAR.ID COLON ID COLONEQUALS exp 

	ID  shift 89
	.  error


state 58
	funDec:  FUNCTION.ID LPAREN Params RPAREN EQUALS exp 
	funDec:  FUNCTION.ID LPAREN RPAREN EQUALS exp 
	funDec:  FUNCTION.ID LPAREN Params RPAREN COLON ID EQUALS exp 
	funDec:  FUNCTION.ID LPAREN RPAREN COLON ID EQUALS exp 

	ID  shift 90
	.  error


59: shift/reduce conflict (shift 33(0), red'n 54(5)) on DOUBLEARROW
59: shift/reduce conflict (shift 34(0), red'n 54(5)) on RARROW
59: shift/reduce conflict (shift 35(0), red'n 54(5)) on LARROW
59: shift/reduce conflict (shift 36(0), red'n 54(5)) on GREATERTHANEQ
59: shift/reduce conflict (shift 37(0), red'n 54(5)) on LESSTHANEQ
59: shift/reduce conflict (shift 39(0), red'n 54(5)) on BAR
state 59
	infixExp:  exp.STAR exp 
	infixExp:  exp STAR exp.    (54)
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 

	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	.  reduce 54 (src line 147)


60: shift/reduce conflict (shift 33(0), red'n 55(5)) on DOUBLEARROW
60: shift/reduce conflict (shift 34(0), red'n 55(5)) on RARROW
60: shift/reduce conflict (shift 35(0), red'n 55(5)) on LARROW
60: shift/reduce conflict (shift 36(0), red'n 55(5)) on GREATERTHANEQ
60: shift/reduce conflict (shift 37(0), red'n 55(5)) on LESSTHANEQ
60: shift/reduce conflict (shift 39(0), red'n 55(5)) on BAR
state 60
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp FORWARDSLASH exp.    (55)
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 

	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	.  reduce 55 (src line 148)


61: shift/reduce conflict (shift 33(0), red'n 56(4)) on DOUBLEARROW
61: shift/reduce conflict (shift 34(0), red'n 56(4)) on RARROW
61: shift/reduce conflict (shift 35(0), red'n 56(4)) on LARROW
61: shift/reduce conflict (shift 36(0), red'n 56(4)) on GREATERTHANEQ
61: shift/reduce conflict (shift 37(0), red'n 56(4)) on LESSTHANEQ
61: shift/reduce conflict (shift 39(0), red'n 56(4)) on BAR
state 61
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp PLUS exp.    (56)
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 

	STAR  shift 28
	FORWARDSLASH  shift 29
	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	.  reduce 56 (src line 149)


62: shift/reduce conflict (shift 33(0), red'n 57(4)) on DOUBLEARROW
62: shift/reduce conflict (shift 34(0), red'n 57(4)) on RARROW
62: shift/reduce conflict (shift 35(0), red'n 57(4)) on LARROW
62: shift/reduce conflict (shift 36(0), red'n 57(4)) on GREATERTHANEQ
62: shift/reduce conflict (shift 37(0), red'n 57(4)) on LESSTHANEQ
62: shift/reduce conflict (shift 39(0), red'n 57(4)) on BAR
state 62
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp MINUS exp.    (57)
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 

	STAR  shift 28
	FORWARDSLASH  shift 29
	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	.  reduce 57 (src line 150)


63: shift/reduce conflict (shift 33(0), red'n 58(3)) on DOUBLEARROW
63: shift/reduce conflict (shift 34(0), red'n 58(3)) on RARROW
63: shift/reduce conflict (shift 35(0), red'n 58(3)) on LARROW
63: shift/reduce conflict (shift 36(0), red'n 58(3)) on GREATERTHANEQ
63: shift/reduce conflict (shift 37(0), red'n 58(3)) on LESSTHANEQ
63: shift/reduce conflict (shift 39(0), red'n 58(3)) on BAR
state 63
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp EQUALS exp.    (58)
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 

	EQUALS  error
	PLUS  shift 30
	MINUS  shift 31
	STAR  shift 28
	FORWARDSLASH  shift 29
	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	.  reduce 58 (src line 151)


64: shift/reduce conflict (shift 38(2), red'n 59(0)) on AND
64: shift/reduce conflict (shift 32(3), red'n 59(0)) on EQUALS
64: shift/reduce conflict (shift 30(4), red'n 59(0)) on PLUS
64: shift/reduce conflict (shift 31(4), red'n 59(0)) on MINUS
64: shift/reduce conflict (shift 28(5), red'n 59(0)) on STAR
64: shift/reduce conflict (shift 29(5), red'n 59(0)) on FORWARDSLASH
64: shift/reduce conflict (shift 33(0), red'n 59(0)) on DOUBLEARROW
64: shift/reduce conflict (shift 34(0), red'n 59(0)) on RARROW
64: shift/reduce conflict (shift 35(0), red'n 59(0)) on LARROW
64: shift/reduce conflict (shift 36(0), red'n 59(0)) on GREATERTHANEQ
64: shift/reduce conflict (shift 37(0), red'n 59(0)) on LESSTHANEQ
64: shift/reduce conflict (shift 39(0), red'n 59(0)) on BAR
state 64
	infixExp:  exp.STAR exp 
	infixExp:  exp.FORWARDSLASH exp 
	infixExp:  exp.PLUS exp 
	infixExp:  exp.MINUS exp 
	infixExp:  exp.EQUALS exp 
	infixExp:  exp.DOUBLEARROW exp 
	infixExp:  exp DOUBLEARROW exp.    (59)
	infixExp:  exp.RARROW exp 
	infixExp:  exp.LARROW exp 
	infixExp:  exp.GREATERTHANEQ exp 
	infixExp:  exp.LESSTHANEQ exp 
	infixExp:  exp.AND exp 
	infixExp:  exp.BAR exp 

	AND  shift 38
	EQUALS  shift 32
	PLUS  shift 30
	MINUS  shift 31
	STAR  shift 28
	FORWARDSLASH  shift 29
	DOUBLEARROW  shift 33
	RARROW  shift 34
	LARROW  shift 35
	GREATERTHANEQ  shift 36
	LESSTHANEQ  shift 37
	BAR  shift 39
	.  reduce 59 (src line 152)

